argocd_garabage/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: argo-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: dev-external-ip
    #Associate the ingress with the certificate name
    networking.gke.io/managed-certificates: dev-gyeongsik-certificate
    networking.gke.io/v1beta1.FrontendConfig: argocd-frontendconfig
  labels:
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/component: server
spec:
  rules:
    - host: dev-spring.gyeongsik-tet.shop
      http:
        paths:
          - path: /*
            backend:
              serviceName: argocd-server-external
              servicePort: http
